# ngage

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  README.txt  mkdocs.yml  pyproject.toml  readthedocs.yml  setup.py  tox.ini
.github/workflows/: codeql-analysis.yml  tests.yml
Ctl/: requirements.txt
docs/: ansible.md  examples.md  templates.md
facsimile/: requirements-docs.txt  requirements-test.txt  requirements.txt
ngage/: __init__.py  cli.py  config.py  exceptions.py  shell.py
ngage/plugins/: __init__.py  bird.py  eznc.py  napalm.py
scripts/: diff.sh  pushone.sh
src/ngage/: cli.py  exceptions.py  shell.py
src/ngage/plugins/: __init__.py  bird.py
src/ngage/templates/: bird.j2
tests/: test_cli.py  test_context.py  test_driver.py  test_plugin_napalm.py
tests/data/config/tst0/: config.yaml
