[tool.poetry]
name = "ngage"
readme = "README.md"
version = "0.1.0.2"
description = "network gadget config twirler"
authors = ["20C <code@20c.com>"]

repository = "https://github.com/20c/rdap"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
		"Topic :: Utilities",
]

packages = [
    { include = "ngage", from = "src" },
]

[tool.poetry.scripts]
rdap = "ngage.cli:cli"

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
click = "^7"
pluginmgr = "^1"
munge = "^1"
tabulate = "^0.8.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
tox = "^3.21.3"
pytest-cov = "^2.11.1"
codecov = "^2.1.11"
coverage = "^5.4"

# plugins
napalm = "^3.2.0"
junos-eznc = "^2.5.4"

# linting
flake8 = "^3.8.4"
black = "^20.8b1"
isort = "^5.7.0"

# docs
markdown-include = "^0.6.0"
mkdocs = "^1.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
