[tool.poetry]
name = "ngage"
readme = "README.md"
version = "0.1.0.2"
description = "network gadget config twirler"
authors = ["20C <code@20c.com>"]

repository = "https://github.com/20c/ngage"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
		"Topic :: Utilities",
]

packages = [
    { include = "ngage", from = "src" },
]

[tool.poetry.scripts]
ngage = "ngage.cli:cli"

[tool.poetry.dependencies]
python = "^3.7"
click = ">=7"
pluginmgr = "^1"
munge = "^1"
tabulate = "^0.8.7"

[tool.poetry.dev-dependencies]
# testing
codecov = ">=2"
coverage = ">=5"
pytest = ">=6"
pytest-django = ">=3.8"
pytest-cov = "*"

# linting
# bandit = ">=1.6.2"
black = ">=20"
isort = ">=5.7"
flake8 = ">=3.8"
mypy = ">=0.950"
pre-commit = ">=2.13"
pyupgrade = ">=2.19"

# docs
markdown = "*"
markdown-include = ">=0.5,<1"
mkdocs = "^1.2.3"

# ctl
ctl = ">=1"
jinja2 = ">=2"
tmpl = ">=1"

# plugins
junos-eznc = ">=1.3.1,<3"
napalm = ">=1.1.0,<3"

[tool.poetry.plugins."markdown.extensions"]
pymdgen = "pymdgen.md:Extension"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3